Fixed width on mobile devices with long titles

--- a/app/styles/application.styl
+++ b/app/styles/application.styl
@@ -139,6 +139,9 @@ body
 // Sessions
 // ---------------------
 
+.session-title
+  overflow hidden
+
 .session-buttons
   top 50px
   position relative
